pattern: table - combo-filter tag - bugfix with z-index

--- a/theme/mapping/table-mapping.scss
+++ b/theme/mapping/table-mapping.scss
@@ -23,6 +23,7 @@
 					flex-flow: row nowrap;
 					margin: 0.25rem;
 					padding: 0.75rem;
+					z-index: auto;
 					.key {
 						margin-right: 0.25rem;
 						order: -1;
